FXML-ek összekötögetve, betöltödik a loading screen (még nem FXML) és a játék FXML is. Közös ConnectionController lett megírva.

--- a/CarcassonneClient/src/main/resources/fxml_carcassonne_menu.fxml
+++ b/CarcassonneClient/src/main/resources/fxml_carcassonne_menu.fxml
@@ -16,7 +16,7 @@
                              <HBox spacing="30">
                                 <children>
                                     <Label text="Név"></Label>
-                                    <TextField id="nameTextField"></TextField>
+                                    <TextField fx:id="nameTextField"></TextField>
                                 </children>
                             </HBox>
                             <Label id="errorNameText" text="" disable="true" textFill="RED"></Label>
