Képek felvétele view és model oldalon, képek keverése csak model oldalon, kártyahúzás valamennyire mindkét oldalon, kártyaforgatás view oldalon.

--- a/CarcassonneClient/src/main/resources/fxml_carcassonne_game.fxml
+++ b/CarcassonneClient/src/main/resources/fxml_carcassonne_game.fxml
@@ -22,7 +22,7 @@
         <VBox spacing="10">
             <children>
                 <GridPane fx:id="rightGridPane"></GridPane>
-                <ImageView fitHeight="200" fitWidth="200">
+                <ImageView fx:id="imageView" fitHeight="200" fitWidth="200">
                     <image>
                         <Image url="resources/images/woodenFrame.jpg" />
                     </image>
