--- a/CarcassonneClient/src/resources/fxml/fxml_carcassonne_game.fxml
+++ b/CarcassonneClient/src/resources/fxml/fxml_carcassonne_game.fxml
@@ -8,14 +8,13 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 
-<BorderPane fx:id="borderPane" xmlns:fx="http://javafx.com/fxml" fx:controller="view.FXMLGameController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="borderPane" fx:controller="view.FXMLGameController">
     <center>
         <ScrollPane fx:id="scrollPane" prefWidth="680" prefHeight="680" >
-            <StackPane fx:id="stackPane">
+            
                 <GridPane fx:id="centerGridPane" alignment="CENTER">
                     <padding><Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/></padding>
                 </GridPane>
-            </StackPane>
         </ScrollPane>
     </center>
     <right>
