--- a/CarcassonneClient/src/resources/css/style.css
+++ b/CarcassonneClient/src/resources/css/style.css
@@ -2,7 +2,7 @@
     -fx-background-image: url("../images/wooden_background.jpg");
     -fx-background-repeat: stretch;   
 }
-#carcassonneText{
+#carcassonneText,#loadingText,#timer{
    -fx-font-size: 32px;
    -fx-font-family: "Georgia";
    -fx-fill: #A68064;
@@ -54,12 +54,19 @@
 }
 #right_buttons{
     -fx-graphic: url("../images/landtileback_icon.jpg");
-    /*-fx-background-position: center center;*/
-    //-fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
 }
 #loading_background{
-    -fx-background-image: url("../images/loading_screen.jpg");
+    -fx-background-image: url("../images/loading.jpg");
     -fx-background-size: cover;
-    /*-fx-background-position: center center;*/
-    //-fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
+}
+#loadingText {
+   -fx-font-size: 40px;
+}
+#timer {
+    -fx-font-size: 100px;
+    -fx-fill: linear-gradient(#7C5B45,#896B57);
+    -fx-font-family: "Sans-serif";
+}
+#centerGridPane{
+    -fx-background-image: url("../images/table.jpg");
 }
