--- a/CarcassonneClient/src/resources/fxml/fxml_carcassonne_game.fxml
+++ b/CarcassonneClient/src/resources/fxml/fxml_carcassonne_game.fxml
@@ -8,12 +8,12 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="borderPane">
+<BorderPane fx:id="borderPane" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <ScrollPane fx:id="scrollPane" prefWidth="680" prefHeight="680" >
             
                 <GridPane fx:id="centerGridPane" alignment="CENTER">
-                    <padding><Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/></padding>
+                    
                 </GridPane>
         </ScrollPane>
     </center>
