--- a/CarcassonneClient/src/resources/css/style.css
+++ b/CarcassonneClient/src/resources/css/style.css
@@ -2,13 +2,19 @@
     -fx-background-image: url("../images/wooden_background.jpg");
     -fx-background-repeat: stretch;   
 }
-#carcassonneText,#loadingText,#timer{
+#carcassonneText,#loadingText,#timer,#resultText{
    -fx-font-size: 32px;
    -fx-font-family: "Georgia";
    -fx-fill: #A68064;
-   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 )
+   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
-#joinButton,#exitButton,#locateButton,#skipButton {
+#rankingTextResult,#nameTextResult,#pointTextResult {
+    -fx-font-size: 25px;
+    -fx-font-family: "Georgia";
+    -fx-fill: #7B3F00;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+}
+#joinButton,#exitButton,#locateButton,#skipButton,#backToMainMenuButton {
     -fx-background-color: 
         #000000,
         linear-gradient(#A68064 0%, #785b45 20%, #785b45 100%),
@@ -22,7 +28,7 @@
     -fx-font-size: 12px;
     -fx-padding: 10 20 10 20;
 }
-#joinButton:hover,#exitButton:hover,#locateButton:hover,#skipButton:hover {
+#joinButton:hover,#exitButton:hover,#locateButton:hover,#skipButton:hover,#backToMainMenuButton:hover {
     -fx-background-color: 
         #000000,
         linear-gradient(#b99b84 0%, #A08C7C 20%, #A08C7C 100%),
@@ -40,7 +46,7 @@
    -fx-font-size: 32px;
    -fx-font-family: "Georgia";
    -fx-fill: #6B4226;
-   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 )
+   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 #nameTextField {
     -fx-background-color: transparent, #97694F, transparent, #CDB38B;
@@ -64,7 +70,7 @@
     -fx-background-image: url("../images/loading.jpg");
     -fx-background-size: cover;
 }
-#loadingText {
+#loadingText,#resultText {
    -fx-font-size: 40px;
 }
 #timer {
@@ -109,6 +115,9 @@
 #locateFollowerVBox {
     -fx-background-image: url("../images/locate_follower.jpg");
 }
+#resultScreenBorderPane {
+    -fx-background-image: url("../images/result2.jpg");
+}
 #leftRotateButton,#rightRotateButton {
     -fx-background-color: 
         #000000,
@@ -128,4 +137,27 @@
     -fx-background-radius: 5,4,3,5;
     -fx-background-insets: 0,1,2,0;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+.dialog-pane {
+    -fx-background-image: url("../images/dialog-pane.jpg");
+}
+.dialog-pane > *.label.content {
+    -fx-font-size: 18px;
+    -fx-font-family: "Georgia";
+    -fx-text-fill: #5C4033; 
+    -fx-text-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+    -fx-translate-y: 18;
+}
+.dialog-pane > *.button {
+    -fx-background-color: 
+        #000000,
+        linear-gradient(#A68064 0%, #785b45 20%, #785b45 100%),
+        linear-gradient(#785b45, #785b45),
+        radial-gradient(center 50% 0%, radius 100%, rgba(132,121,95,0.9), rgba(255,255,255,0));
+    -fx-background-radius: 5,4,3,5;
+    -fx-background-insets: 0,1,2,0;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-font-family: "Arial Black";
+    -fx-text-fill: linear-gradient(#FEE8D6, #EECBAD);
+    -fx-padding: 10 20 10 20;
 }
